Fix width overflow issue and add title

--- a/style.css
+++ b/style.css
@@ -1,15 +1,12 @@
 body {
 	background: black;
 	font-family: 'Verdana', sans-serif;
-  /*width: 100%;*/
-  overflow-x: hidden;
 }
 
 #divForLargeImage {
   position: absolute;
   display: none;
   z-index: 10;
-  width: 100%;
   text-align: center;
 }
 
